# Rusty-Chat-App

./: .gitignore  README.md
backend/: Cargo.toml  package.json
backend/src/: main.rs
backend/static/: index.html
frontend/src/: App.jsx
